Hard-coded image location
...and hid the work divs.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		</table>	
 	</div>
 	
-	<br>		
+	<div style="display:none">		
 	
 	<div id="cardHold"></div>
 
@@ -191,7 +191,7 @@
 	
 	<div id="op_discard"></div>	
 	
-	<br>
+	</div>
 
 </body>
 
