--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <HTML>
 <head>
 	<title>Gwent</title>
-	<link rel="stylesheet" type="text/css" href="css/gwent_26.css" />
+	<link rel="stylesheet" type="text/css" href="css/gwent_27.css" />
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="js/page_process_26.js"></script>
-	<script type="text/javascript" src="js/deck_generator_26.js"></script>
-	<script type="text/javascript" src="js/card_play_26.js"></script>
-	<script type="text/javascript" src="js/test_26.js"></script>
+	<script type="text/javascript" src="js/page_process_27.js?v=1"></script>
+	<script type="text/javascript" src="js/deck_generator_27.js?v=1"></script>
+	<script type="text/javascript" src="js/card_play_27.js?v=2"></script>
+	<script type="text/javascript" src="js/test_27.js?v=1"></script>
 </head>
 
 <body>
